# Tennis_Analysis

./: .gitignore  Makefile  Pi  README.md  RESTRUCTURING.md  pyproject.toml  requirements.txt
configs/: court_keypoint.yaml  court_segmentation.yaml
docs/tasks/: remove-tracknet-swap-rfdetr.md  shorten-ball-trail.md
models/court_keypoint/: results.csv
models/player_detection/: events.out.tfevents.1775213587.algo-1.82.0  metrics.csv
models/scoreboard_detection/: events.out.tfevents.1775356607.algo-1.82.0  metrics.csv
reports/: score-detection-test-video_output.csv  sequential_test_clip_1_output.csv  test_clip_1_output.csv
scripts/: convert_coco_to_yolo_kpt.py  convert_coco_to_yolo_seg.py  correct_label.py  error_analysis.py  generate_mask_data.py  preprocess.py  test_models_on_video.py
scripts/modal/: launch_court_segmentation.py  launch_court_segmentation_rfdetr.py
scripts/sagemaker/: entry_ball_detection.py  entry_court_keypoint.py  entry_player_detection.py  entry_scoreboard_detection.py  launch_ball_detection.py  launch_court_keypoint.py  launch_player_detection.py  launch_scoreboard_detection.py
src/: __init__.py
src/datasets/: __init__.py  tracknet_dataset.py
src/evaluation/: evaluate.py
src/inference/: ball_tracking.py  predict.py  scoreboard_ocr.py
src/models/: __init__.py  tracknet.py
src/training/: train_ball_detection.py  train_court_keypoint.py  train_court_segmentation.py  (+3 more)
tests/: test_ball_tracking.py  test_coco_to_yolo.py  test_evaluation.py  test_metrics.py  test_models.py  test_predict.py  test_sagemaker.py  test_utils.py
(+4 files in other folders)
